--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+    --primary: #d81e5b;
+    --secondary: #8c38ff;
+    --dark: #131a26;
+    --light: #eee;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Fira Sans', sans-serif;
+}
+
+body{
+    background: rgb(22,126,198);
+    background: linear-gradient(323deg, rgba(22,126,198,1) 0%, rgba(4,24,38,1) 79%, rgba(0,0,0,1) 100%);
+}
+
+.App{
+    display: flex;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+}
+
+.calculator{
+    width: 100%;
+    max-width: 400px;
+    border-radius: 16px;
+    border: 1px solid #888;
+    overflow: hidden;
+    box-shadow: 0 2px 64px rgba(0,0,0,0.2);
+}
+
+.display{
+    padding: 25px;
+    text-align: right;
+    background-color: var(--dark);
+    color: var(--light);
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.display span{
+    font-size: 14px;
+    color: #888;
+}
+
+button {
+    appearance: none;
+    /* border: none; */
+    outline: none;
+    color: #fff;
+    font-size: 20px;
+    padding: 16px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+button:hover{
+    opacity: 0.9;
+}
+
+.operators {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
+
+.operators button{
+    flex: 1 1 0%;
+    background-color: var(--primary);
+    font-weight: 700;
+    font-size: 25px;
+    border: 1px solid #131a26;
+}
+
+.digits{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.digits button{
+    flex: 1 1 33.333%;
+    max-width: 33.333%;
+    background-color: var(--dark);
+    border-right: 1px solid #888;
+    border-bottom: 1px solid #888;
+    border-left: 1px solid #888;
 }
